--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     </nav>
     <div class="content">
         <BR><br><BR><br><h1>Joonatan Sirkka</h1>
-        <h1>Myyjä, kevytyrittäjä ja opiskelija</h2>
+        <h1>Myyjä, kevytyrittäjä ja opiskelija</h1>
         <p>Hei ja tervetuloa kotosivuilleni!</p>
         <p>Olen Joonatan Sirkka, 22-vuotias opiskelija Espoosta. <br>
         Opiskelen tietojenkäsittelijäksi ensimmäistä vuotta Haaga-Heliassa. <br>Opintojeni ohessa toimin myyjänä, salibandyerotuomarina sekä kevytyrittäjänä.</p>
-        <h1>Opintoni:</h3>
+        <h1>Opintoni:</h1>
         <ul>
-            <p>Ylioppilas, Espoon yhteislyseon lukio (2018–2022)<p>
-           <p>Alemmpi AMK, Tietojenkäsittely, Haaga-Helia (2024-Jatkuu)<p>
+        <p>Ylioppilas, Espoon yhteislyseon lukio (2018–2022)<p>
+        <p>Alempi AMK, Tietojenkäsittely, Haaga-Helia (2024-Jatkuu)<p>
         </ul>
         <img src="omakuva.png.jpg" alt="Joonatan Sirkka" class="profile-image">
     </div>
